// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo with custom client name: README.md 1`] = `
"# Hoppscotch Echo WebSocket Client

## Overview

Undestand how to use Hoppscotch Echo WebSocket as a client. Hoppscotch Echo WebSocket server echoes back any messages sent to it. You can use this to test WebSocket connections and message flows.


- **Version:** 1.0.0
- **Server URL:** wss://echo-websocket.hoppscotch.io


## Installation

Install dependencies:

\`\`\`bash
npm install
\`\`\`


## Usage

\`\`\`javascript
const HoppscotchClient = require('./client');

// throwSendErrors defaults to true: a failed send re-throws after the registered
// error handlers run, so you can react to each failure. Pass
// new HoppscotchClient(undefined, false) to keep a high-throughput producer loop
// running and rely on registered error handlers instead.
const wsClient = new HoppscotchClient();

async function main() {
  try {
    await wsClient.connect();
    // use wsClient to send/receive messages
    await wsClient.close();
  } catch (error) {
    console.error('Failed to connect or send:', error);
  }
}

main();
\`\`\`


## API

### \`connect()\`
Establishes a WebSocket connection.

### \`registerMessageHandler(handlerFunction)\`
Registers a callback for incoming messages.

### \`registerErrorHandler(handlerFunction)\`
Registers a callback for connection errors.

### \`close()\`
Closes the WebSocket connection.


### Available Operations

#### \`sendEchoMessage(payload)\`
Send a message to the echo server.


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(true)
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(true)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(123)
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(123)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage({
  \\"test\\": \\"test text\\"
})
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message({
  \\"test\\": \\"test text\\"
})
\`\`\`




#### \`handleTimeStampMessage(payload)\`
Receive the timestamp message sent from server every second.


**Example (JavaScript):**
\`\`\`javascript
client.handleTimeStampMessage(\\"11:13:24 GMT+0000 (Coordinated Universal Time)\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.handle_time_stamp_message(\\"11:13:24 GMT+0000 (Coordinated Universal Time)\\")
\`\`\`




"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo with custom client name: asyncapi.yaml 1`] = `
"asyncapi: 3.0.0
info:
  title: Hoppscotch Echo WebSocket Client
  version: 1.0.0
  description: >
    Undestand how to use Hoppscotch Echo WebSocket as a client.
    Hoppscotch Echo WebSocket server echoes back any messages sent to it. You can use this to test WebSocket connections and message flows.

servers:
  echoServer:
    $ref: './commons/servers.yml#/servers/echoServer'

channels:
  echo:
    $ref: './commons/channels.yml#/channels/echo'

operations:
  sendEchoMessage:
    action: send
    channel:
      $ref: '#/channels/echo'
    summary: Send a message to the echo server.
    messages:
      - $ref: '#/channels/echo/messages/echo'  

  handleTimeStampMessage:
    action: receive
    channel:
      $ref: '#/channels/echo'
    summary: Receive the timestamp message sent from server every second.
    messages:
      - $ref: '#/channels/echo/messages/timestamp' 
"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo with custom client name: client.js 1`] = `
"//////////////////////////////////////////////////
//
// Hoppscotch Echo WebSocket Client - 1.0.0
// Protocol: wss
// Host: echo-websocket.hoppscotch.io
//
//////////////////////////////////////////////////

const WebSocket = require('ws');
const { compileSchemasByOperationId, validateMessage } = require('@asyncapi/keeper');
const path = require('path');
const asyncapiFilepath = path.resolve(__dirname, './asyncapi.yaml');
class HoppscotchClient {

  /*
    * Constructor to initialize the WebSocket client
    * @param {string} url - The WebSocket server URL. Use it if the server URL is different from the default one taken from the AsyncAPI document.
    * @param {boolean} [throwSendErrors=true] - Controls how the instance send methods react to a send failure.
    *   When true (default) the error is re-thrown after the registered error handlers run, so the caller can
    *   handle each failure. When false the error is suppressed after the handlers run, which keeps a
    *   high-throughput producer loop going.
  */
  constructor(url, throwSendErrors = true) {
    this.url = url || 'wss://echo-websocket.hoppscotch.io';
    this.websocket = null;
    this.messageHandlers = [];
    this.errorHandlers = [];
    this.outgoingProcessors = [];
    this.compiledSchemas = {};
    this.schemasCompiled = false;
    this.sendOperationsId = [\\"sendEchoMessage\\"];
    this.throwSendErrors = throwSendErrors; // Re-throw send failures after handlers run
  }

  // Method to establish a WebSocket connection
  connect() {
      return new Promise((resolve, reject) => {
          this.websocket = new WebSocket(this.url);
          // On successful connection
        this.websocket.onopen = () => {
        console.log('Connected to Hoppscotch Echo WebSocket Client server');
        resolve();
      };

          // On receiving a message
      this.websocket.onmessage = (event) => {
        if (this.messageHandlers.length > 0) {
          // Call custom message handlers
          this.messageHandlers.forEach(handler => {
            if (typeof handler === 'function') {
              this.handleMessage(event.data, handler);
            }
          });
        } else {
          // Default message logging
          console.log('Message received:', event.data);
        }
      };

          // On error first call custom error handlers, then default error behavior
      this.websocket.onerror = (error) => {
        if (this.errorHandlers.length > 0) {
          // Call custom error handlers
          this.errorHandlers.forEach(handler => handler(error));
        } else {
          // Default error behavior
          console.error('WebSocket Error:', error);
        }
        reject(error);
      };

          // On connection close
      this.websocket.onclose = () => {
        console.log('Disconnected from Hoppscotch Echo WebSocket Client server');
      };

      });
  }

  // Method to register custom message handlers
   registerMessageHandler(handler) {
    if (typeof handler === 'function') {
      this.messageHandlers.push(handler);
    } else {
      console.warn('Message handler must be a function');
    }
  }

  // Method to register custom error handlers
   registerErrorHandler(handler) {
    if (typeof handler === 'function') {
      this.errorHandlers.push(handler);
    } else {
      console.warn('Error handler must be a function');
    }
  }

  registerOutgoingProcessor(processor) {
    if (typeof processor === 'function') {
      this.outgoingProcessors.push(processor);
    } else {
      console.warn('Outgoing processor must be a function');
    }
  }

  // Method to handle message with callback
   handleMessage(message, cb) {
    if (cb) cb(message);
  }

  /**
   * Initialize and compile all schemas for operations defined.
   * This should be called once after creating the client instance.
   * Subsequent calls will be ignored if schemas are already compiled.
   * 
   * @returns {Promise<void>}
   * @throws {Error} If schema compilation fails for any operation
   */
  async compileOperationSchemas() {
    if (this.schemasCompiled) {
      return;
    }

    try {
      // Compile schemas for all send operations
      for (const operationId of this.sendOperationsId) {
        this.compiledSchemas[operationId] = await compileSchemasByOperationId(asyncapiFilepath, operationId);
      }
      this.schemasCompiled = true;
      console.log('Schemas initialized successfully for operations:', this.sendOperationsId.join(', '));
    } catch (error) {
      console.error('Error initializing schemas:', error);
      this.schemasCompiled = false;
      if (error instanceof Error) {
        error.message = \`Schema compilation failed: \${error.message}\`;
        throw error;
      } else {
        throw new Error(\`Schema compilation failed: \${String(error)}\`);
      }
    }
  }

  /**
   * Sends a sendEchoMessage message over the WebSocket connection.
   *
   * This static method has no access to the instance error handlers or the throwSendErrors
   * flag, so any failure (serialization, validation against all schemas, or a closed socket)
   * is always thrown to the caller. Use the instance method sendEchoMessage() if you want
   * failures routed through the registered error handlers.
   *
   * @param {Object} message - The message payload to send. Should match the schema defined in the AsyncAPI document.
   * @param {WebSocket} socket - The WebSocket connection to use.
   * @param {Array<function>} schemas - Array of compiled schema validator functions for this operation.
   * @returns {Object} { isValid: true } once the message has been sent.
   * @throws {TypeError} If message cannot be stringified to JSON
   * @throws {Error} If WebSocket connection is not in OPEN state
   * @throws {Error} If message validation fails against all schemas
   */
  static sendEchoMessage(message, socket, schemas) {
    if (!schemas || schemas.length === 0) {
      socket.send(JSON.stringify(message));
      return { isValid: true };
    }
    const allValidationErrors = [];
    for (const compiledSchema of schemas) {
      const validationResult = validateMessage(compiledSchema, message);
      if (validationResult.isValid) {
        socket.send(JSON.stringify(message));
        return { isValid: true };
      }
      if (validationResult.validationErrors) {
        allValidationErrors.push(...validationResult.validationErrors);
      }
    }
    // No schema matched: surface the failure instead of silently dropping the message.
    throw new Error('Message validation failed for sendEchoMessage: ' + JSON.stringify(allValidationErrors));
  }

  /**
   * Instance method version of sendEchoMessage that uses the client's own WebSocket connection.
   * Automatically compiles schemas if not already compiled.
   * Runs any registered outgoing processors on the message before sending.
   *
   * On a send failure the error is forwarded to every callback registered with
   * registerErrorHandler() (or logged if none is registered), then re-thrown unless the
   * client was constructed with throwSendErrors=false. Setting throwSendErrors=false keeps a
   * high-throughput producer loop running and relies on the registered error handlers instead.
   *
   * @param {Object} message - The message payload to send
   * @returns {Object|undefined} The static method result (e.g. { isValid: true }) on success, or undefined when a failure was suppressed via throwSendErrors=false
   * @throws {Error} If WebSocket connection is not established
   * @throws {Error} If schema compilation fails
   * @throws {Error} If sending or validation fails and throwSendErrors is true (the constructor default)
   */
  async sendEchoMessage(message){
    if(!this.websocket){
      throw new Error('WebSocket connection not established. Call connect() first.');
    }
    await this.compileOperationSchemas();
    let processedMessage = message;
    for (const processor of this.outgoingProcessors) {
      processedMessage = processor(processedMessage) ?? processedMessage;
    }
    const schemas = this.compiledSchemas['sendEchoMessage'];
    try {
      return HoppscotchClient.sendEchoMessage(processedMessage, this.websocket, schemas);
    } catch (error) {
      if (this.errorHandlers.length > 0) {
        this.errorHandlers.forEach(handler => handler(error));
      } else {
        console.error('Error sending sendEchoMessage message:', error);
      }
      if (this.throwSendErrors) {
        throw error;
      }
    }
  }

  // Method to close the WebSocket connection
   close() {
    if (this.websocket) {
        this.websocket.close();
        console.log('WebSocket connection closed.');
    }
  }
}
module.exports = HoppscotchClient;

"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo with custom client name: example.js 1`] = `
"const HoppscotchClient = require('./client');

function myMessageHandler(message) {
  console.log('====================');
  console.log('Just proving I got the message in myMessageHandler:', message);
  console.log('====================');
}

function myErrorHandler(error) {
  console.error('Errors from WebSocket:', error.message);
}

function outgoingProcessor(message) {
  const processed = { payload: message, timestamp: new Date().toISOString() };
  console.log('Outgoing processor fired:', JSON.stringify(processed));
  return processed;
}

async function main() {
  const hoppscotchClient = new HoppscotchClient();
  hoppscotchClient.registerMessageHandler(myMessageHandler);
  hoppscotchClient.registerErrorHandler(myErrorHandler);

  hoppscotchClient.registerOutgoingProcessor(outgoingProcessor);

  try {
    await hoppscotchClient.connect();

    for (let i = 0; i < 5; i++) {
      try {
          await hoppscotchClient.sendEchoMessage('test');
      } catch (error) {
        console.error('Error while sending message:', error);
      }
      await new Promise(resolve => setTimeout(resolve, 5000));
    }
  } catch (error) {
    console.error('Failed to connect to WebSocket:', error.message);
  } finally {
    await hoppscotchClient.close();
  }
}

main();


"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo: README.md 1`] = `
"# Hoppscotch Echo WebSocket Client

## Overview

Undestand how to use Hoppscotch Echo WebSocket as a client. Hoppscotch Echo WebSocket server echoes back any messages sent to it. You can use this to test WebSocket connections and message flows.


- **Version:** 1.0.0
- **Server URL:** wss://echo-websocket.hoppscotch.io


## Installation

Install dependencies:

\`\`\`bash
npm install
\`\`\`


## Usage

\`\`\`javascript
const HoppscotchEchoWebSocketClient = require('./client');

// throwSendErrors defaults to true: a failed send re-throws after the registered
// error handlers run, so you can react to each failure. Pass
// new HoppscotchEchoWebSocketClient(undefined, false) to keep a high-throughput producer loop
// running and rely on registered error handlers instead.
const wsClient = new HoppscotchEchoWebSocketClient();

async function main() {
  try {
    await wsClient.connect();
    // use wsClient to send/receive messages
    await wsClient.close();
  } catch (error) {
    console.error('Failed to connect or send:', error);
  }
}

main();
\`\`\`


## API

### \`connect()\`
Establishes a WebSocket connection.

### \`registerMessageHandler(handlerFunction)\`
Registers a callback for incoming messages.

### \`registerErrorHandler(handlerFunction)\`
Registers a callback for connection errors.

### \`close()\`
Closes the WebSocket connection.


### Available Operations

#### \`sendEchoMessage(payload)\`
Send a message to the echo server.


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(true)
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(true)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(123)
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(123)
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage({
  \\"test\\": \\"test text\\"
})
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message({
  \\"test\\": \\"test text\\"
})
\`\`\`




#### \`handleTimeStampMessage(payload)\`
Receive the timestamp message sent from server every second.


**Example (JavaScript):**
\`\`\`javascript
client.handleTimeStampMessage(\\"11:13:24 GMT+0000 (Coordinated Universal Time)\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.handle_time_stamp_message(\\"11:13:24 GMT+0000 (Coordinated Universal Time)\\")
\`\`\`




"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo: asyncapi.yaml 1`] = `
"asyncapi: 3.0.0
info:
  title: Hoppscotch Echo WebSocket Client
  version: 1.0.0
  description: >
    Undestand how to use Hoppscotch Echo WebSocket as a client.
    Hoppscotch Echo WebSocket server echoes back any messages sent to it. You can use this to test WebSocket connections and message flows.

servers:
  echoServer:
    $ref: './commons/servers.yml#/servers/echoServer'

channels:
  echo:
    $ref: './commons/channels.yml#/channels/echo'

operations:
  sendEchoMessage:
    action: send
    channel:
      $ref: '#/channels/echo'
    summary: Send a message to the echo server.
    messages:
      - $ref: '#/channels/echo/messages/echo'  

  handleTimeStampMessage:
    action: receive
    channel:
      $ref: '#/channels/echo'
    summary: Receive the timestamp message sent from server every second.
    messages:
      - $ref: '#/channels/echo/messages/timestamp' 
"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo: client.js 1`] = `
"//////////////////////////////////////////////////
//
// Hoppscotch Echo WebSocket Client - 1.0.0
// Protocol: wss
// Host: echo-websocket.hoppscotch.io
//
//////////////////////////////////////////////////

const WebSocket = require('ws');
const { compileSchemasByOperationId, validateMessage } = require('@asyncapi/keeper');
const path = require('path');
const asyncapiFilepath = path.resolve(__dirname, './asyncapi.yaml');
class HoppscotchEchoWebSocketClient {

  /*
    * Constructor to initialize the WebSocket client
    * @param {string} url - The WebSocket server URL. Use it if the server URL is different from the default one taken from the AsyncAPI document.
    * @param {boolean} [throwSendErrors=true] - Controls how the instance send methods react to a send failure.
    *   When true (default) the error is re-thrown after the registered error handlers run, so the caller can
    *   handle each failure. When false the error is suppressed after the handlers run, which keeps a
    *   high-throughput producer loop going.
  */
  constructor(url, throwSendErrors = true) {
    this.url = url || 'wss://echo-websocket.hoppscotch.io';
    this.websocket = null;
    this.messageHandlers = [];
    this.errorHandlers = [];
    this.outgoingProcessors = [];
    this.compiledSchemas = {};
    this.schemasCompiled = false;
    this.sendOperationsId = [\\"sendEchoMessage\\"];
    this.throwSendErrors = throwSendErrors; // Re-throw send failures after handlers run
  }

  // Method to establish a WebSocket connection
  connect() {
      return new Promise((resolve, reject) => {
          this.websocket = new WebSocket(this.url);
          // On successful connection
        this.websocket.onopen = () => {
        console.log('Connected to Hoppscotch Echo WebSocket Client server');
        resolve();
      };

          // On receiving a message
      this.websocket.onmessage = (event) => {
        if (this.messageHandlers.length > 0) {
          // Call custom message handlers
          this.messageHandlers.forEach(handler => {
            if (typeof handler === 'function') {
              this.handleMessage(event.data, handler);
            }
          });
        } else {
          // Default message logging
          console.log('Message received:', event.data);
        }
      };

          // On error first call custom error handlers, then default error behavior
      this.websocket.onerror = (error) => {
        if (this.errorHandlers.length > 0) {
          // Call custom error handlers
          this.errorHandlers.forEach(handler => handler(error));
        } else {
          // Default error behavior
          console.error('WebSocket Error:', error);
        }
        reject(error);
      };

          // On connection close
      this.websocket.onclose = () => {
        console.log('Disconnected from Hoppscotch Echo WebSocket Client server');
      };

      });
  }

  // Method to register custom message handlers
   registerMessageHandler(handler) {
    if (typeof handler === 'function') {
      this.messageHandlers.push(handler);
    } else {
      console.warn('Message handler must be a function');
    }
  }

  // Method to register custom error handlers
   registerErrorHandler(handler) {
    if (typeof handler === 'function') {
      this.errorHandlers.push(handler);
    } else {
      console.warn('Error handler must be a function');
    }
  }

  registerOutgoingProcessor(processor) {
    if (typeof processor === 'function') {
      this.outgoingProcessors.push(processor);
    } else {
      console.warn('Outgoing processor must be a function');
    }
  }

  // Method to handle message with callback
   handleMessage(message, cb) {
    if (cb) cb(message);
  }

  /**
   * Initialize and compile all schemas for operations defined.
   * This should be called once after creating the client instance.
   * Subsequent calls will be ignored if schemas are already compiled.
   * 
   * @returns {Promise<void>}
   * @throws {Error} If schema compilation fails for any operation
   */
  async compileOperationSchemas() {
    if (this.schemasCompiled) {
      return;
    }

    try {
      // Compile schemas for all send operations
      for (const operationId of this.sendOperationsId) {
        this.compiledSchemas[operationId] = await compileSchemasByOperationId(asyncapiFilepath, operationId);
      }
      this.schemasCompiled = true;
      console.log('Schemas initialized successfully for operations:', this.sendOperationsId.join(', '));
    } catch (error) {
      console.error('Error initializing schemas:', error);
      this.schemasCompiled = false;
      if (error instanceof Error) {
        error.message = \`Schema compilation failed: \${error.message}\`;
        throw error;
      } else {
        throw new Error(\`Schema compilation failed: \${String(error)}\`);
      }
    }
  }

  /**
   * Sends a sendEchoMessage message over the WebSocket connection.
   *
   * This static method has no access to the instance error handlers or the throwSendErrors
   * flag, so any failure (serialization, validation against all schemas, or a closed socket)
   * is always thrown to the caller. Use the instance method sendEchoMessage() if you want
   * failures routed through the registered error handlers.
   *
   * @param {Object} message - The message payload to send. Should match the schema defined in the AsyncAPI document.
   * @param {WebSocket} socket - The WebSocket connection to use.
   * @param {Array<function>} schemas - Array of compiled schema validator functions for this operation.
   * @returns {Object} { isValid: true } once the message has been sent.
   * @throws {TypeError} If message cannot be stringified to JSON
   * @throws {Error} If WebSocket connection is not in OPEN state
   * @throws {Error} If message validation fails against all schemas
   */
  static sendEchoMessage(message, socket, schemas) {
    if (!schemas || schemas.length === 0) {
      socket.send(JSON.stringify(message));
      return { isValid: true };
    }
    const allValidationErrors = [];
    for (const compiledSchema of schemas) {
      const validationResult = validateMessage(compiledSchema, message);
      if (validationResult.isValid) {
        socket.send(JSON.stringify(message));
        return { isValid: true };
      }
      if (validationResult.validationErrors) {
        allValidationErrors.push(...validationResult.validationErrors);
      }
    }
    // No schema matched: surface the failure instead of silently dropping the message.
    throw new Error('Message validation failed for sendEchoMessage: ' + JSON.stringify(allValidationErrors));
  }

  /**
   * Instance method version of sendEchoMessage that uses the client's own WebSocket connection.
   * Automatically compiles schemas if not already compiled.
   * Runs any registered outgoing processors on the message before sending.
   *
   * On a send failure the error is forwarded to every callback registered with
   * registerErrorHandler() (or logged if none is registered), then re-thrown unless the
   * client was constructed with throwSendErrors=false. Setting throwSendErrors=false keeps a
   * high-throughput producer loop running and relies on the registered error handlers instead.
   *
   * @param {Object} message - The message payload to send
   * @returns {Object|undefined} The static method result (e.g. { isValid: true }) on success, or undefined when a failure was suppressed via throwSendErrors=false
   * @throws {Error} If WebSocket connection is not established
   * @throws {Error} If schema compilation fails
   * @throws {Error} If sending or validation fails and throwSendErrors is true (the constructor default)
   */
  async sendEchoMessage(message){
    if(!this.websocket){
      throw new Error('WebSocket connection not established. Call connect() first.');
    }
    await this.compileOperationSchemas();
    let processedMessage = message;
    for (const processor of this.outgoingProcessors) {
      processedMessage = processor(processedMessage) ?? processedMessage;
    }
    const schemas = this.compiledSchemas['sendEchoMessage'];
    try {
      return HoppscotchEchoWebSocketClient.sendEchoMessage(processedMessage, this.websocket, schemas);
    } catch (error) {
      if (this.errorHandlers.length > 0) {
        this.errorHandlers.forEach(handler => handler(error));
      } else {
        console.error('Error sending sendEchoMessage message:', error);
      }
      if (this.throwSendErrors) {
        throw error;
      }
    }
  }

  // Method to close the WebSocket connection
   close() {
    if (this.websocket) {
        this.websocket.close();
        console.log('WebSocket connection closed.');
    }
  }
}
module.exports = HoppscotchEchoWebSocketClient;

"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for hoppscotch echo: example.js 1`] = `
"const HoppscotchEchoWebSocketClient = require('./client');

function myMessageHandler(message) {
  console.log('====================');
  console.log('Just proving I got the message in myMessageHandler:', message);
  console.log('====================');
}

function myErrorHandler(error) {
  console.error('Errors from WebSocket:', error.message);
}

function outgoingProcessor(message) {
  const processed = { payload: message, timestamp: new Date().toISOString() };
  console.log('Outgoing processor fired:', JSON.stringify(processed));
  return processed;
}

async function main() {
  const hoppscotchEchoWebSocketClient = new HoppscotchEchoWebSocketClient();
  hoppscotchEchoWebSocketClient.registerMessageHandler(myMessageHandler);
  hoppscotchEchoWebSocketClient.registerErrorHandler(myErrorHandler);

  hoppscotchEchoWebSocketClient.registerOutgoingProcessor(outgoingProcessor);

  try {
    await hoppscotchEchoWebSocketClient.connect();

    for (let i = 0; i < 5; i++) {
      try {
          await hoppscotchEchoWebSocketClient.sendEchoMessage('test');
      } catch (error) {
        console.error('Error while sending message:', error);
      }
      await new Promise(resolve => setTimeout(resolve, 5000));
    }
  } catch (error) {
    console.error('Failed to connect to WebSocket:', error.message);
  } finally {
    await hoppscotchEchoWebSocketClient.close();
  }
}

main();


"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for postman echo: README.md 1`] = `
"# Postman Echo WebSocket Client

## Overview

Understand how to use the Postman Echo WebSocket as a client. The Postman Echo WebSocket server echoes back any messages sent to it.

- **Version:** 1.0.0
- **Server URL:** wss://ws.postman-echo.com/raw


## Installation

Install dependencies:

\`\`\`bash
npm install
\`\`\`


## Usage

\`\`\`javascript
const PostmanEchoWebSocketClientClient = require('./client');

// throwSendErrors defaults to true: a failed send re-throws after the registered
// error handlers run, so you can react to each failure. Pass
// new PostmanEchoWebSocketClientClient(undefined, false) to keep a high-throughput producer loop
// running and rely on registered error handlers instead.
const wsClient = new PostmanEchoWebSocketClientClient();

async function main() {
  try {
    await wsClient.connect();
    // use wsClient to send/receive messages
    await wsClient.close();
  } catch (error) {
    console.error('Failed to connect or send:', error);
  }
}

main();
\`\`\`


## API

### \`connect()\`
Establishes a WebSocket connection.

### \`registerMessageHandler(handlerFunction)\`
Registers a callback for incoming messages.

### \`registerErrorHandler(handlerFunction)\`
Registers a callback for connection errors.

### \`close()\`
Closes the WebSocket connection.


### Available Operations

#### \`sendEchoMessage(payload)\`
Send a message to the Postman Echo server.


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage(\\"test\\")
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message(\\"test\\")
\`\`\`


**Example (JavaScript):**
\`\`\`javascript
client.sendEchoMessage({
  \\"test\\": \\"test text\\"
})
\`\`\`


**Example (Python):**
\`\`\`python
client.send_echo_message({
  \\"test\\": \\"test text\\"
})
\`\`\`




"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for postman echo: asyncapi.yaml 1`] = `
"asyncapi: 3.0.0

info:
  title: Postman Echo WebSocket Client
  version: 1.0.0
  description: Understand how to use the Postman Echo WebSocket as a client.
    The Postman Echo WebSocket server echoes back any messages sent to it.

servers:
  echoServer:
    host: ws.postman-echo.com
    pathname: /raw
    protocol: wss

channels:
  echo:
    description: The main channel where messages are sent and echoed back by the Postman Echo WebSocket server.
    address: /
    messages:
      echo:
        $ref: '#/components/messages/echo'

operations:
  sendEchoMessage:
    summary: Send a message to the Postman Echo server.
    action: send
    channel: 
      $ref: '#/channels/echo'
    messages:
      - $ref: '#/channels/echo/messages/echo'
    reply:
      channel: 
        $ref: '#/channels/echo'

components:
  messages:
    echo:
      summary: A message exchanged with the echo server.
      payload: {}
      examples:
        - name: string
          payload: test
        - name: object
          payload: 
            test: test text"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for postman echo: client.js 1`] = `
"//////////////////////////////////////////////////
//
// Postman Echo WebSocket Client - 1.0.0
// Protocol: wss
// Host: ws.postman-echo.com
// Path: /raw
//
//////////////////////////////////////////////////

const WebSocket = require('ws');
const { compileSchemasByOperationId, validateMessage } = require('@asyncapi/keeper');
const path = require('path');
const asyncapiFilepath = path.resolve(__dirname, './asyncapi.yaml');
class PostmanEchoWebSocketClientClient {

  /*
    * Constructor to initialize the WebSocket client
    * @param {string} url - The WebSocket server URL. Use it if the server URL is different from the default one taken from the AsyncAPI document.
    * @param {boolean} [throwSendErrors=true] - Controls how the instance send methods react to a send failure.
    *   When true (default) the error is re-thrown after the registered error handlers run, so the caller can
    *   handle each failure. When false the error is suppressed after the handlers run, which keeps a
    *   high-throughput producer loop going.
  */
  constructor(url, throwSendErrors = true) {
    this.url = url || 'wss://ws.postman-echo.com/raw';
    this.websocket = null;
    this.messageHandlers = [];
    this.errorHandlers = [];
    this.outgoingProcessors = [];
    this.compiledSchemas = {};
    this.schemasCompiled = false;
    this.sendOperationsId = [\\"sendEchoMessage\\"];
    this.throwSendErrors = throwSendErrors; // Re-throw send failures after handlers run
  }

  // Method to establish a WebSocket connection
  connect() {
      return new Promise((resolve, reject) => {
          this.websocket = new WebSocket(this.url);
          // On successful connection
        this.websocket.onopen = () => {
        console.log('Connected to Postman Echo WebSocket Client server');
        resolve();
      };

          // On receiving a message
      this.websocket.onmessage = (event) => {
        if (this.messageHandlers.length > 0) {
          // Call custom message handlers
          this.messageHandlers.forEach(handler => {
            if (typeof handler === 'function') {
              this.handleMessage(event.data, handler);
            }
          });
        } else {
          // Default message logging
          console.log('Message received:', event.data);
        }
      };

          // On error first call custom error handlers, then default error behavior
      this.websocket.onerror = (error) => {
        if (this.errorHandlers.length > 0) {
          // Call custom error handlers
          this.errorHandlers.forEach(handler => handler(error));
        } else {
          // Default error behavior
          console.error('WebSocket Error:', error);
        }
        reject(error);
      };

          // On connection close
      this.websocket.onclose = () => {
        console.log('Disconnected from Postman Echo WebSocket Client server');
      };

      });
  }

  // Method to register custom message handlers
   registerMessageHandler(handler) {
    if (typeof handler === 'function') {
      this.messageHandlers.push(handler);
    } else {
      console.warn('Message handler must be a function');
    }
  }

  // Method to register custom error handlers
   registerErrorHandler(handler) {
    if (typeof handler === 'function') {
      this.errorHandlers.push(handler);
    } else {
      console.warn('Error handler must be a function');
    }
  }

  registerOutgoingProcessor(processor) {
    if (typeof processor === 'function') {
      this.outgoingProcessors.push(processor);
    } else {
      console.warn('Outgoing processor must be a function');
    }
  }

  // Method to handle message with callback
   handleMessage(message, cb) {
    if (cb) cb(message);
  }

  /**
   * Initialize and compile all schemas for operations defined.
   * This should be called once after creating the client instance.
   * Subsequent calls will be ignored if schemas are already compiled.
   * 
   * @returns {Promise<void>}
   * @throws {Error} If schema compilation fails for any operation
   */
  async compileOperationSchemas() {
    if (this.schemasCompiled) {
      return;
    }

    try {
      // Compile schemas for all send operations
      for (const operationId of this.sendOperationsId) {
        this.compiledSchemas[operationId] = await compileSchemasByOperationId(asyncapiFilepath, operationId);
      }
      this.schemasCompiled = true;
      console.log('Schemas initialized successfully for operations:', this.sendOperationsId.join(', '));
    } catch (error) {
      console.error('Error initializing schemas:', error);
      this.schemasCompiled = false;
      if (error instanceof Error) {
        error.message = \`Schema compilation failed: \${error.message}\`;
        throw error;
      } else {
        throw new Error(\`Schema compilation failed: \${String(error)}\`);
      }
    }
  }

  /**
   * Sends a sendEchoMessage message over the WebSocket connection.
   *
   * This static method has no access to the instance error handlers or the throwSendErrors
   * flag, so any failure (serialization, validation against all schemas, or a closed socket)
   * is always thrown to the caller. Use the instance method sendEchoMessage() if you want
   * failures routed through the registered error handlers.
   *
   * @param {Object} message - The message payload to send. Should match the schema defined in the AsyncAPI document.
   * @param {WebSocket} socket - The WebSocket connection to use.
   * @param {Array<function>} schemas - Array of compiled schema validator functions for this operation.
   * @returns {Object} { isValid: true } once the message has been sent.
   * @throws {TypeError} If message cannot be stringified to JSON
   * @throws {Error} If WebSocket connection is not in OPEN state
   * @throws {Error} If message validation fails against all schemas
   */
  static sendEchoMessage(message, socket, schemas) {
    if (!schemas || schemas.length === 0) {
      socket.send(JSON.stringify(message));
      return { isValid: true };
    }
    const allValidationErrors = [];
    for (const compiledSchema of schemas) {
      const validationResult = validateMessage(compiledSchema, message);
      if (validationResult.isValid) {
        socket.send(JSON.stringify(message));
        return { isValid: true };
      }
      if (validationResult.validationErrors) {
        allValidationErrors.push(...validationResult.validationErrors);
      }
    }
    // No schema matched: surface the failure instead of silently dropping the message.
    throw new Error('Message validation failed for sendEchoMessage: ' + JSON.stringify(allValidationErrors));
  }

  /**
   * Instance method version of sendEchoMessage that uses the client's own WebSocket connection.
   * Automatically compiles schemas if not already compiled.
   * Runs any registered outgoing processors on the message before sending.
   *
   * On a send failure the error is forwarded to every callback registered with
   * registerErrorHandler() (or logged if none is registered), then re-thrown unless the
   * client was constructed with throwSendErrors=false. Setting throwSendErrors=false keeps a
   * high-throughput producer loop running and relies on the registered error handlers instead.
   *
   * @param {Object} message - The message payload to send
   * @returns {Object|undefined} The static method result (e.g. { isValid: true }) on success, or undefined when a failure was suppressed via throwSendErrors=false
   * @throws {Error} If WebSocket connection is not established
   * @throws {Error} If schema compilation fails
   * @throws {Error} If sending or validation fails and throwSendErrors is true (the constructor default)
   */
  async sendEchoMessage(message){
    if(!this.websocket){
      throw new Error('WebSocket connection not established. Call connect() first.');
    }
    await this.compileOperationSchemas();
    let processedMessage = message;
    for (const processor of this.outgoingProcessors) {
      processedMessage = processor(processedMessage) ?? processedMessage;
    }
    const schemas = this.compiledSchemas['sendEchoMessage'];
    try {
      return PostmanEchoWebSocketClientClient.sendEchoMessage(processedMessage, this.websocket, schemas);
    } catch (error) {
      if (this.errorHandlers.length > 0) {
        this.errorHandlers.forEach(handler => handler(error));
      } else {
        console.error('Error sending sendEchoMessage message:', error);
      }
      if (this.throwSendErrors) {
        throw error;
      }
    }
  }

  // Method to close the WebSocket connection
   close() {
    if (this.websocket) {
        this.websocket.close();
        console.log('WebSocket connection closed.');
    }
  }
}
module.exports = PostmanEchoWebSocketClientClient;

"
`;

exports[`WebSocket Clients Integration Tests JavaScript Client Common Integration tests for JavaScript client generation generate simple client for postman echo: example.js 1`] = `
"const PostmanEchoWebSocketClientClient = require('./client');

function myMessageHandler(message) {
  console.log('====================');
  console.log('Just proving I got the message in myMessageHandler:', message);
  console.log('====================');
}

function myErrorHandler(error) {
  console.error('Errors from WebSocket:', error.message);
}

function outgoingProcessor(message) {
  const processed = { payload: message, timestamp: new Date().toISOString() };
  console.log('Outgoing processor fired:', JSON.stringify(processed));
  return processed;
}

async function main() {
  const postmanEchoWebSocketClientClient = new PostmanEchoWebSocketClientClient();
  postmanEchoWebSocketClientClient.registerMessageHandler(myMessageHandler);
  postmanEchoWebSocketClientClient.registerErrorHandler(myErrorHandler);

  postmanEchoWebSocketClientClient.registerOutgoingProcessor(outgoingProcessor);

  try {
    await postmanEchoWebSocketClientClient.connect();

    for (let i = 0; i < 5; i++) {
      try {
          await postmanEchoWebSocketClientClient.sendEchoMessage('test');
      } catch (error) {
        console.error('Error while sending message:', error);
      }
      await new Promise(resolve => setTimeout(resolve, 5000));
    }
  } catch (error) {
    console.error('Failed to connect to WebSocket:', error.message);
  } finally {
    await postmanEchoWebSocketClientClient.close();
  }
}

main();


"
`;
